--- a/app/_scss/layout/_blog_item.scss
+++ b/app/_scss/layout/_blog_item.scss
@@ -3,7 +3,6 @@
   .main-wrapper {
     > .sidebar {
       @include isolation-span(8, 3, 'both');
-      padding: 40px;
       @include narrow-paragraphs;
       
       > h1 {
@@ -14,7 +13,21 @@
   }
 }
 
+.blog-all {
+  .main-wrapper {
+    > .sidebar {
+      padding: 40px;
+    }
+  }
+}
+
 .blog-item {
+  .main-wrapper {
+    > .sidebar {
+      padding: (40px + $header-with-line-margin-top) 40px;
+    }
+  }
+
   .post-wrapper {
     position: relative;
   }
