--- a/app/_scss/variables/_variables.scss
+++ b/app/_scss/variables/_variables.scss
@@ -83,4 +83,6 @@ $checkbox-border-radius: 20%;
 $show-shortcut-tips: true;
 $header-with-line-margin-top: 30px;
 $footer-height: 50px;
+$list-item-padding: 1em;
+$list-item-padding-correction: 1.1em;
 
